
www = @WWW@
wwwdisk = @WWWDISK@

dist_pkgdata_DATA = \
	cape.scale \
	700t.scale \
	925t.scale \
	300t.scale \
	500t.scale \
	850t.scale \
	925rh.scale \
	850rh.scale \
	700rh.scale \
	500rh.scale \
	300rh.scale \
	925hgt.scale \
	850hgt.scale \
	700hgt.scale \
	500hgt.scale \
	300hgt.scale \
	300wind.scale \
	500wind.scale \
	700wind.scale \
	850wind.scale \
	925wind.scale \
	pwat.scale \
	pcp.scale

## File created by the gnome-build tools

